--- a/cx2t/claw.properties.in
+++ b/cx2t/claw.properties.in
@@ -33,11 +33,15 @@ ut.reports.dir=@CX2T_UT_REPORTS_DIR@
 
 # Driver
 driver.src.dir=@CLAWFC_SRC_DIR@
+driver.ut.src.dir=@CLAWFC_UT_SRC_DIR@
 driver.classes.dir=@CLAWFC_CLASSES_DIR@
+driver.ut.classes.dir=@CLAWFC_UT_CLASSES_DIR@
 driver.dist.dir=@CLAWFC_DIST_DIR@
 driver.conf.dir=@CLAW_X2T_CONFIG_DIR@
 driver.conf.file=@CLAWFC_CONF_FILE@
 driver.runtime.conf.file=@CLAWFC_RUNTIME_CONF_FILE@
+driver.gen.src.dir=@CLAWFC_GEN_SRC_DIR@
+driver.ut.report.dir=@CLAWFC_UT_REPORT_DIR@
 
 # Third-party libraries
 ivy.dir=${3rdparty.dist.dir}
