--- a/cx2t/ivy.xml
+++ b/cx2t/ivy.xml
@@ -11,7 +11,8 @@
   <info organisation="claw" module="claw"/>
   <dependencies>
     <dependency org="commons-cli" name="commons-cli" rev="1.3.1"/>
-    <dependency org="org.antlr" name="antlr4" rev="4.7"/>
+    <dependency org="org.antlr" name="antlr4" rev="4.8-1"/>
+    <dependency org="org.antlr" name="antlr4-runtime" rev="4.8-1"/>
     <dependency org="junit" name="junit" rev="4.12"/>
     <dependency org="net.consensys.cava" name="cava-toml" rev="0.3.1"/>
     <dependency org="org.jacoco" name="org.jacoco.ant" rev="0.8.2" />
