--- a/driver/src/build.xml
+++ b/driver/src/build.xml
@@ -13,20 +13,58 @@
 
     <!-- Classpath for the CX2T Translator library -->
     <path id="build.path">
+        <pathelement path="${junit.dep}" />
+        <pathelement path="${st4.dep}"/>
+        <pathelement path="${antlr.dep}"/>
+        <pathelement path="${antlr4.dep}"/>
+        <pathelement path="${antlr4.runtime.dep}"/>
         <pathelement path="${argparse4j.dep}"/>
         <pathelement path="${claw.wani.dep}"/>
     </path>
+
+    <path id="antlr.path">
+        <pathelement path="${st4.dep}"/>
+        <pathelement path="${antlr.dep}"/>
+        <pathelement path="${antlr4.dep}"/>
+        <pathelement path="${antlr4.runtime.dep}"/>
+    </path>
+
+    <!-- Dependencies scan parser classes -->
+    <property name="dep.scan.parser.dir"
+              value="${driver.gen.src.dir}/depscan/parser"/>
 
     <!-- Initialization step -->
     <target name="init" description="Initialize build directories">
         <tstamp/>
         <mkdir dir="${driver.classes.dir}"/>
+        <mkdir dir="${driver.ut.classes.dir}"/>
+        <mkdir dir="${dep.scan.parser.dir}"/>
     </target>
 
-    <!-- Compile the java code for the two libraries -->
-    <target name="compile" description="compile the source">
-        <javac executable="${javac.exec}" fork="yes" includeantruntime="false" srcdir="${driver.src.dir}"
-               destdir="${driver.classes.dir}" classpathref="build.path" debug="on"/>
+    <!-- Check if dependencies scan parser is up-to-date or need to be re-generated -->
+    <uptodate property="antlr.required"
+              targetfile="${driver.src.dir}/clawfc/depscan/FortranDepScanner.g4" >
+        <srcfiles dir="${dep.scan.parser.dir}" includes="*.java" erroronmissingdir="false" />
+    </uptodate>
+    <!-- Generate the CLAW parser from the ANTLR grammar file -->
+    <target name="antlr" if="antlr.required" description="Generate the dependencies scan parser from ANTLR grammar file">
+        <java jvm="${java.exec}" classname="org.antlr.v4.Tool" fork="true" failonerror="true" classpathref="antlr.path">
+            <arg value="-o"/>
+            <arg value="${dep.scan.parser.dir}"/>
+            <arg value="-package"/>
+            <arg value="clawfc.depscan.parser"/>
+            <arg line="${driver.src.dir}/clawfc/depscan/FortranDepScanner.g4"/>
+        </java>
+    </target>
+
+    <target name="compile" depends="antlr" description="compile the source">
+        <javac executable="${javac.exec}" fork="yes" includeantruntime="false" srcdir=""
+               destdir="${driver.classes.dir}" classpathref="build.path" debug="on">
+            <src>
+                <pathelement path="${driver.src.dir}"/>
+                <pathelement path="${driver.gen.src.dir}"/>
+            </src>
+        </javac>
     </target>
 
     <!-- Package compiled files into their own library -->
@@ -61,9 +99,53 @@
 
     <target name="clean" description="clean up">
         <delete dir="${driver.classes.dir}"/>
+        <delete dir="${driver.ut.classes.dir}"/>
         <delete file="${driver.dist.dir}/${driver.jar}"/>
     </target>
 
+    <path id="ut.build.path">
+        <pathelement path="${junit.dep}" />
+        <pathelement path="${st4.dep}"/>
+        <pathelement path="${antlr.dep}"/>
+        <pathelement path="${antlr4.dep}"/>
+        <pathelement path="${antlr4.runtime.dep}"/>
+        <pathelement path="${driver.dist.dir}/${driver.jar}"/>
+    </path>
+
+    <target name="compile-unit-tests" depends="compile" description="compile unit tests source">
+        <javac executable="${javac.exec}" fork="yes" includeantruntime="false" srcdir=""
+               destdir="${driver.ut.classes.dir}" classpathref="ut.build.path" debug="on">
+            <src>
+                <pathelement path="${driver.ut.src.dir}"/>
+            </src>
+        </javac>
+    </target>
+
+    <target name="run-unit-tests" depends="compile-unit-tests" description="Run unit tests">
+        <path id="ut.runtime.path">
+            <pathelement path="${junit.dep}" />
+            <pathelement path="${hamcrest.dep}" />
+            <pathelement path="${antlr4.runtime.dep}"/>
+            <pathelement path="${driver.dist.dir}/${driver.jar}"/>
+            <pathelement path="${driver.ut.classes.dir}"/>
+        </path>
+        <mkdir dir="${driver.ut.report.dir}"/>
+        <junit jvm="${java.exec}" printsummary="yes" haltonfailure="yes">
+            <classpath path="${junit.dep}" />
+            <classpath path="${hamcrest.dep}" />
+            <classpath path="${antlr4.runtime.dep}" />
+            <classpath path="${driver.dist.dir}/${driver.jar}" />
+            <classpath path="${driver.ut.classes.dir}" />
+            <formatter type="plain"/>
+            <formatter type="xml"/>
+            <batchtest fork="yes" todir="${driver.ut.report.dir}">
+                <fileset dir="${driver.ut.classes.dir}">
+                    <include name="clawfc/ut/*Test*.class"/>
+                </fileset>
+            </batchtest>
+        </junit>
+    </target>
+
     <!-- Default target -->
-    <target name="main" depends="init, compile, jar"/>
+    <target name="main" depends="init, antlr, compile, jar"/>
 </project>
