Added driver-tests project; Minor fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,10 +211,21 @@ add_custom_command(
   COMMENT "Running CLAWFC unit-tests"
 )
 
+add_custom_target(run-driver-tests)
+add_dependencies(run-driver-tests build-claw-solution)
+add_custom_command(
+  TARGET run-driver-tests
+  COMMAND ${Ant_EXECUTABLE} -f ${ANT_SOLUTION}
+  ${ANT_FLAGS} ${OFFLINE}
+  -Dclaw.properties.dir=${CX2T_PROPERTIES_DIR}
+  run-driver-tests
+  COMMENT "Running CLAWFC tests"
+)
+
 option(GENERATE_ECLIPSE_IDE_PROJECTS "Generate Eclipse IDE projects" ON)
 if(GENERATE_ECLIPSE_IDE_PROJECTS)
   message(STATUS "Generating Eclipse projects")
-  foreach(PROJECT_NAME cx2t cx2t-driver)
+  foreach(PROJECT_NAME cx2t cx2t-driver clawfc-driver-tests)
       file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/ide/eclipse/${PROJECT_NAME})
       configure_file(${CMAKE_SOURCE_DIR}/resources/eclipse/${PROJECT_NAME}.project.in
                      ${CMAKE_BINARY_DIR}/ide/eclipse/${PROJECT_NAME}/.project
