--- a/resources/eclipse/clawfc-driver-tests.classpath.in
+++ b/resources/eclipse/clawfc-driver-tests.classpath.in
@@ -51,7 +51,7 @@
 	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_TATSU@.jar"/>
 	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_SHENRON@.jar"/>
 	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_WANI@.jar"/>
-	<classpathentry kind="lib" path="@INT_CLAW_HOME@/bin/clawfc.jar"/>
+	<classpathentry kind="lib" path="@INT_CLAW_HOME@/bin/@CLAWFC_JAR@"/>
 
 	<classpathentry kind="output" path="bin"/>
 </classpath>
