--- a/driver/unittests/build.xml
+++ b/driver/unittests/build.xml
@@ -3,9 +3,8 @@
  See LICENSE file for more information
 -->
 
-<!-- CLAWFC build process -->
-<project name="clawfc_tests" default="main" basedir=".">
-    <description>Run tests on CLAWFC driver</description>
+<project name="clawfc-ut" default="main" basedir=".">
+    <description>Build CLAWFC driver unit-tests</description>
 
     <!-- Value set externally-->
     <property name="claw.properties.dir" value=""/>
@@ -21,59 +20,67 @@
         <pathelement path="${antlr4.dep}"/>
         <pathelement path="${antlr4.runtime.dep}"/>
         <pathelement path="${argparse4j.dep}"/>
-        <pathelement path="${argparse4j.dep}"/>
         <pathelement path="${driver.dep}"/>
     </path>
+
+    <path id="antlr.path">
+        <pathelement path="${st4.dep}"/>
+        <pathelement path="${antlr.dep}"/>
+        <pathelement path="${antlr4.dep}"/>
+        <pathelement path="${antlr4.runtime.dep}"/>
+    </path>
+
+    <!-- Dependencies scan parser classes -->
+    <property name="dep.scan.parser.dir"
+              value="${driver.gen.src.dir}/clawfc/depscan/parser"/>
 
     <!-- Initialization step -->
     <target name="init" description="Initialize build directories">
         <tstamp/>
-        <mkdir dir="${driver.tests.classes.dir}"/>
+        <mkdir dir="${driver.ut.classes.dir}"/>
     </target>
 
     <target name="compile" depends="init" description="compile the source">
         <javac executable="${javac.exec}" fork="yes" includeantruntime="false" srcdir=""
-               destdir="${driver.tests.classes.dir}" classpathref="build.path" debug="on">
+               destdir="${driver.ut.classes.dir}" classpathref="build.path" debug="on">
             <src>
                 <pathelement path="${driver.test.utils.src.dir}"/>
-                <pathelement path="${driver.tests.src.dir}"/>
-                <pathelement path="${driver.tests.gen.src.dir}"/>
+                <pathelement path="${driver.ut.src.dir}"/>
             </src>
         </javac>
     </target>
 
     <!-- Package compiled files into their own library -->
     <target name="jar" depends="compile" description="package, output to JAR">
-        <mkdir dir="${driver.tests.dist.dir}"/>
+        <mkdir dir="${driver.ut.dist.dir}"/>
         <!-- Driver -->
-        <jar jarfile="${driver.tests.dep}" basedir="${driver.tests.classes.dir}"
+        <jar jarfile="${driver.ut.dep}" basedir="${driver.ut.classes.dir}"
              includes="clawfc/**">
             <manifest>
-                <attribute name="Main-Class" value="clawfc.tests.Main"/>
-                <attribute name="Class-Path" value="${driver.tests.runtime.classpath}"/>
+                <attribute name="Main-Class" value="clawfc.ut.Main"/>
+                <attribute name="Class-Path" value="${driver.ut.runtime.classpath}"/>
             </manifest>
         </jar>
     </target>
 
     <target name="clean" description="clean up">
-        <delete dir="${driver.tests.classes.dir}"/>
-        <delete dir="${driver.tests.dist.dir}"/>
+        <delete dir="${driver.ut.classes.dir}"/>
+        <delete file="${driver.ut.dep}"/>
     </target>
 
-    <target name="run" depends="jar" description="Run tests">
-        <mkdir dir="${driver.tests.report.dir}"/>
+    <target name="run" depends="compile" description="Run unit tests">
+        <mkdir dir="${driver.ut.report.dir}"/>
         <junit jvm="${java.exec}" printsummary="yes" haltonfailure="yes">
             <classpath path="${junit.dep}" />
             <classpath path="${hamcrest.dep}" />
+            <classpath path="${antlr4.runtime.dep}" />
             <classpath path="${driver.dep}" />
-            <classpath path="${driver.tests.classes.dir}" />
-            <classpath path="${antlr4.runtime.dep}"/>
-            <classpath path="${argparse4j.dep}"/>
+            <classpath path="${driver.ut.classes.dir}" />
             <formatter type="plain"/>
             <formatter type="xml"/>
-            <batchtest fork="yes" todir="${driver.tests.report.dir}">
-                <fileset dir="${driver.tests.classes.dir}">
-                    <include name="clawfc/tests/*Test*.class"/>
+            <batchtest fork="yes" todir="${driver.ut.report.dir}">
+                <fileset dir="${driver.ut.classes.dir}">
+                    <include name="clawfc/ut/*Test*.class"/>
                 </fileset>
             </batchtest>
         </junit>
