--- a/resources/eclipse/clawfc-tests.classpath.in
+++ b/resources/eclipse/clawfc-tests.classpath.in
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="cx2t-gen-src"/>
 	<classpathentry kind="src" path="driver-src"/>
 	<classpathentry kind="src" path="driver-gen-src"/>
+	<classpathentry kind="src" path="driver-tests-utils-src"/>
 	<classpathentry kind="src" path="driver-tests-src"/>
 	<classpathentry kind="src" path="driver-tests-gen-src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
