--- a/cx2t/claw.properties.in
+++ b/cx2t/claw.properties.in
@@ -72,6 +72,20 @@ argparse4j.jar=argparse4j.jar
 argparse4j.dep=${3rdparty.dist.dir}/${argparse4j.jar}
 ant-contrib.jar=ant-contrib.jar
 ant-contrib.dep=${3rdparty.dist.dir}/${ant-contrib.jar}
+jaxb-runtime.jar=jaxb-runtime.jar
+jaxb-runtime.dep=${3rdparty.dist.dir}/${jaxb-runtime.jar}
+jaxb-xjc.jar=jaxb-xjc.jar
+jaxb-xjc.dep=${3rdparty.dist.dir}/${jaxb-xjc.jar}
+jaxb-core.jar=jaxb-core.jar
+jaxb-core.dep=${3rdparty.dist.dir}/${jaxb-core.jar}
+jaxb-core.jar=jaxb-core.jar
+jaxb-core.dep=${3rdparty.dist.dir}/${jaxb-core.jar}
+jakarta.activation.jar=jakarta.activation.jar
+jakarta.activation.dep=${3rdparty.dist.dir}/${jakarta.activation.jar}
+jakarta.xml.bind-api.jar=jakarta.xml.bind-api.jar
+jakarta.xml.bind-api.dep=${3rdparty.dist.dir}/${jakarta.xml.bind-api.jar}
+istack-commons-runtime.jar=istack-commons-runtime.jar
+istack-commons-runtime.dep=${3rdparty.dist.dir}/${istack-commons-runtime.jar}
 
 # OMNI compiler libraries and paths
 omni.xcodeml-common.dep=@OMNI_JAR_TOOLS@
@@ -90,8 +104,9 @@ driver.dep=${driver.dist.dir}/${driver.jar}
 driver.libs.dir=../share/claw
 d.l.dir=${driver.libs.dir}
 driver.runtime.classpath=${d.l.dir}/${claw.tatsu.jar} ${d.l.dir}/${claw.wani.jar} ${d.l.dir}/${claw.shenron.jar} \
-${d.l.dir}/${commoncli.jar} ${d.l.dir}/${antlr4.jar} ${d.l.dir}/${antlr4.runtime.jar} ${d.l.dir}/${toml.jar} \
-${d.l.dir}/${argparse4j.jar}
+    ${d.l.dir}/${commoncli.jar} ${d.l.dir}/${antlr4.jar} ${d.l.dir}/${antlr4.runtime.jar} ${d.l.dir}/${toml.jar} \
+    ${d.l.dir}/${argparse4j.jar} ${d.l.dir}/${jaxb-runtime.jar} ${d.l.dir}/${jaxb-core.jar} \
+    ${d.l.dir}/jakarta.xml.bind-api.jar ${d.l.dir}/${jakarta.activation.jar} ${d.l.dir}/${istack-commons-runtime.jar}
 
 # CLAW X2T unittests libraries
 claw.wani.ut.jar=claw-x2t-wani-ut.jar
@@ -106,11 +121,12 @@ driver.test.utils.src.dir=@CLAWFC_TEST_UTIL_SRC_DIR@
 
 # CLAW driver unit-tests
 driver.ut.jar=@CLAWFC_UT_JAR@
-driver.ut.dep=${driver.ut.dist.dir}/${driver.ut.jar}
 driver.ut.dist.dir=@CLAWFC_UT_BIN_DIR@
+driver.ut.dep=${driver.ut.dist.dir}/${driver.ut.jar}
 driver.ut.src.dir=@CLAWFC_UT_SRC_DIR@
 driver.ut.classes.dir=@CLAWFC_UT_CLASSES_DIR@
-driver.ut.runtime.classpath=${driver.dep} ${junit.dep} ${hamcrest.dep}
+driver.ut.runtime.classpath=${driver.dep} ${junit.dep} ${hamcrest.dep} ${jaxb-runtime.dep} ${jaxb-core.dep} \
+    ${jakarta.xml.bind-api.dep} ${jakarta.activation.dep} ${istack-commons-runtime.dep}
 driver.ut.report.dir=@CLAWFC_UT_REPORT_DIR@
 
 # CLAW driver tests
