--- a/resources/eclipse/clawfc-ut.classpath.in
+++ b/resources/eclipse/clawfc-ut.classpath.in
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="driver-ut-src"/>
+	<classpathentry kind="src" path="driver-ut-gen-src"/>
+	<classpathentry kind="src" path="driver-tests-utils-src"/>
 	<classpathentry kind="src" path="cx2t-src"/>
 	<classpathentry kind="src" path="cx2t-gen-src"/>
 	<classpathentry kind="src" path="driver-src"/>
-	<classpathentry kind="src" path="driver-tests-utils-src"/>
 	<classpathentry kind="src" path="driver-gen-src"/>
-	<classpathentry kind="src" path="driver-ut-src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
