--- a/driver/tests/res/depscan/output/reference/2.f90.fif.template
+++ b/driver/tests/res/depscan/output/reference/2.f90.fif.template
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<fortran_file_summary>
+<fortran_file_build_info src_path="{res_dir}/depscan/output/input/2.f90" pp_src_path="{res_dir}/depscan/output/input/2.f90">
     <module uses_claw="true">
         <info start_line_idx="0" end_line_idx="4" name="mod21" start_char_idx="0" end_char_idx="50"/>
         <used_modules>
@@ -23,4 +23,4 @@
             <use start_line_idx="14" end_line_idx="15" name="mod23" start_char_idx="157" end_char_idx="166"/>
         </used_modules>
     </program>
-</fortran_file_summary>
+</fortran_file_build_info>
