--- a/resources/eclipse/cx2t-ut.classpath.in
+++ b/resources/eclipse/cx2t-ut.classpath.in
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="cx2t-ut-src"/>
+	<classpathentry kind="src" path="cx2t-ut-gen-src"/>
 	<classpathentry kind="src" path="cx2t-src"/>
 	<classpathentry kind="src" path="cx2t-gen-src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
@@ -32,6 +34,19 @@
 			<attribute name="javadoc_location" value="jar:file:@CX2T_3RDPARTY_DIST_DIR@/@ARGPARSE_NAME@-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="@CX2T_3RDPARTY_DIST_DIR@/junit.jar">
+	    <attributes>
+			<attribute name="javadoc_location" value="jar:file:@CX2T_3RDPARTY_DIST_DIR@/junit-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="@CX2T_3RDPARTY_DIST_DIR@/hamcrest-core.jar">
+	    <attributes>
+			<attribute name="javadoc_location" value="jar:file:@CX2T_3RDPARTY_DIST_DIR@/hamcrest-core-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="@OMNI_JAR_TOOLS@"/>
+	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_TATSU@.jar"/>
+	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_SHENRON@.jar"/>
+	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_WANI@.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
